{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "79d94439-52b9-4183-a524-bf354dc40ede",
            "actions": [
                {
                    "name": "SidestepUp",
                    "type": "Button",
                    "id": "644d9b02-e24d-4d26-8e42-eefb7f5b25b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": true
                },
                {
                    "name": "SidestepDown",
                    "type": "Button",
                    "id": "f7650f0a-d273-4030-9ec6-32f14ca4de7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": true
                },
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "09af9269-87e0-4cd4-8c26-add1461f54f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "6a05dd4e-f837-44bf-bf3d-88740a356a21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7f65144f-539d-475c-9551-6bc6d7f42462",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "SidestepUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a97a08ec-fdcb-4d2c-bb1b-32cc14659e58",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "SidestepDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9d46fb7-63e9-49bd-a76a-9120870f551f",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef22da8b-6b3f-4cfe-94fa-1eb5e7b74f83",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControls",
            "bindingGroup": "PlayerControls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}